added more HTML for index page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                                 <a class="configurator_menu_itemCard_link" href="https://sunshineauto.ru/vehicle/1">
                                 <div class="configurator_infoBlock1">
                                     <img src="/src/img/item_card_small1.jpg">
-                                    <div class="configurator_infoBlockMileageYear">
+                                    <div class="configu
+                                    rator_infoBlockMileageYear">
                                         <div class="configurator_result_mileage">22 043 км</div>
                                         <div class="configurator_result_mileage">2024</div>
                                     </div>
@@ -311,6 +312,7 @@
                     </a>
                     <ul class="auction_vehicleList">
                         <li class="auction_vehicleCard">
+                            <a href="https://sunshineauto.ru/auction/0054">
                             <div class="auction_vehicleCard_visual">
                                 <img class="auction_img" src="/src/img/auction_128938.jpg">
                                 <div class="auction_lot_num">ЛОТ 0054</div>
@@ -330,8 +332,10 @@
                                     <div class="auction_date">6 Февраля</div>
                                 </div>
                             </div>
+                            </a>
                         </li>
                         <li class="auction_vehicleCard">
+                            <a href="https://sunshineauto.ru/auction/0225">
                             <div class="auction_vehicleCard_visual">
                                 <img class="auction_img" src="/src/img/auction_034954.jpg">
                                 <div class="auction_lot_num">ЛОТ 0225</div>
@@ -351,8 +355,10 @@
                                     <div class="auction_date">12:30</div>
                                 </div>
                             </div>
+                            </a>
                         </li>
                         <li class="auction_vehicleCard">
+                            <a href="https://sunshineauto.ru/auction/0075">
                             <div class="auction_vehicleCard_visual">
                                 <img class="auction_img" src="/src/img/auction_340023.jpg">
                                 <div class="auction_lot_num">ЛОТ 0075</div>
@@ -372,6 +378,7 @@
                                     <div class="auction_date">19:40</div>
                                 </div>
                             </div>
+                            </a>
                         </li>
                     </ul>
                     <a class="label_auction_lotsStatus">554 лота онлайн</a>
@@ -550,20 +557,56 @@
                             </li>
                             <li class="forumFeed_forumSection"> <!--flex-->
                                 <div class="forumFeed_sunshinePRO"><!--flex column-->
-                                    <div>
+                                    <div class="forumFeed_sunshinePRO_header">
                                         <img src="/src/icons/sunshine_bolt_white.svg">
-                                        <a>Sunshine PRO</a>
+                                        <div class="forumFeed_sunshinePRO_STATUS-SUB">Sunshine PRO</div>
                                     </div>
-                                    <div>Последнее сообщение: 03:17</div>
+                                    <div class="forumFeed_sunshinePRO_LM">Последнее сообщение: 03:17</div>
+                                </div>
+                                <div class="forumFeed_onlineCounter">
+                                    <img class="forumFeed_onlineCounter_img" src="/src/icons/stickman_icon_white.svg">
+                                    <div class="forumFeed_onlineCounter_text">12</div>
+                                </div>
+                            </li>
+                            <li class="forumFeed_forumSection"> <!--flex-->
+                                <div class="forumFeed_sunshinePRO"><!--flex column-->
+                                    <div class="forumFeed_sunshinePRO_header">
+                                        <div class="forumFeed_sunshine_title">Зарубежные-авто</div>
+                                    </div>
+                                    <div class="forumFeed_sunshine_LM">Последнее сообщение: 01:44</div>
+                                </div>
+                                <div class="forumFeed_onlineCounter">
+                                    <img class="forumFeed_onlineCounter_img" src="/src/icons/stickman_icon_green.svg">
+                                    <div class="forumFeed_onlineCounter_text">44</div>
+                                </div>
+                            </li>
+                            <li class="forumFeed_articleUser">
+                                <img src="/src/img/forum_plc_4.jpg">
+                                <div class="forumFeed_article-userInfo"> 
+                                    <img src="/src/img/pfp_user_3.png">
+                                    <div class="forumFeed_article-userInfo-status">
+                                        <div>rreplayer</div>
+                                        <div>4 месяца на автосфере</div>             
+                                    </div>
+                                </div>
+                                <div class="forumFeed_articleUser-title">
+                                    Нулевое ТО :) BMW 530D G30
                                 </div>
                                 <div>
-                                    <img src="/src/icons/stickman_icon_white.svg">
-                                    <div>12</div>
+                                    <img src="/src/icons/gradient_fadeout_w-w.svg">
+                                    <div>Вот и пришел этот долгожданный момент - g30 приехала и пора провести первую ТОшку. Из интересного, что стоит сразу отметить - расширительный бачок был установлен с браком, по крайней мере так       
+                                    </div>
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </div>
+            </div>
+
+            <div class="index-updateFeed">
+                <a href="https://sunshineauto.ru">
+                    <button>Обновить подборку</button>
+                </a>
             </div>
         </div>
     </main>
@@ -571,7 +614,25 @@
     <footer class="footer_default">
         <div class="footer_lineContent">
             <div class="footer_flex_container_aligner">
-
+                <div>
+                    <a href="#">О нас</a>
+                    <a href="#">Помощь</a>
+                    <a href="#">Условия</a>
+                    <a href="#">Настройки</a>
+                    <a href="#">Для бизнеса</a>
+                </div>
+                <div>
+                    <a href="#">
+                    <img src="/src/icons/logo_vk_footer_bw.svg">
+                    </a>
+                    <a target="_blank" href="https://t.me/+XnqVi6na5642YjJi">
+                    <img src="/src/icons/logo_tg_footer_bw.svg">
+                    </a>
+                </div>
+                <div>
+                    <p>&#169 Саншайн-авто 2025</p>
+                    <img src="/src/icons/sunshine_grey_logo.svg">
+                </div>
             </div>
         </div>    
     </footer>
